--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --hot --config ./webpack.config.dev"
+    "start": "webpack-dev-server --mode development --hot --config ./webpack.config.dev",
+    "build-dev": "webpack --mode development --config ./webpack.config.dev"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.72.0",
-    "webpack-dev-server": "^4.8.1"
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^4.4.0",
+    "react-hot-loader": "^4.13.0",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "webpack": "^4.20.2"
   }
 }
