--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react-hot-loader": "^4.13.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack": "^4.20.2"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "webpack": "^4.20.2"
+    "react-dom": "^17.0.2"
   }
 }
