--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^5.2.7",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.4.0",
     "react-hot-loader": "^4.13.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.20.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack": "^4.20.2"
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "dependencies": {
     "react": "^17.0.2",
