--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --hot --config ./webpack.config.dev",
+    "start": "webpack-dev-server --mode development --config ./webpack.config.dev",
     "build-dev": "webpack --mode development --config ./webpack.config.dev",
     "build-prod": "webpack --mode production --config ./webpack.config.prod"
   },
@@ -15,7 +15,6 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^6.4.0",
     "css-loader": "^5.2.7",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^0.5.5",
@@ -25,7 +24,7 @@
     "react-hot-loader": "^4.13.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.1.0",
-    "webpack": "^4.20.2",
+    "webpack": "^4.27.0",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.2.0"
