--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --config ./webpack.config.dev",
-    "build-dev": "webpack --mode development --config ./webpack.config.dev",
-    "build-prod": "webpack --mode production --config ./webpack.config.prod"
+    "build-dev": "webpack --mode development --config ./webpack.config.dev"
   },
   "author": "",
   "license": "ISC",
